Tela de cadastro

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/login.css">
 </head>
 <body>
-    <div class="line-header"></div>
+    <div class="header"></div>
     <form class="form">
         <span class="mensagem-erro" id="error">Preencha todos os campos!</span>
         <label class="label" for="user">Usuário</label>
