Criando novas validações no formulário

--- a/cadastro.html
+++ b/cadastro.html
@@ -36,7 +36,7 @@
         <input class="input" id="celular" name="celular" placeholder="(00) 00000-0000">
         <label class="label" for="senha">Senha</label>
         <input class="input" id="senha" name="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25">
-        <ul class="list-requisitos">
+        <ul class="list-requisitos" id="list">
             <li>Mínimo 8 caracteres, máximo 25</li>
             <li>Mínimo uma letra maiúscula</li>
             <li>Mínimo uma letra minúscula</li>
@@ -53,3 +53,4 @@
 <script src="./js/plugins-jquery/jquery.validate.min.js"></script>
 <script src="./js/cadastro.js"></script>
 </html>
+
