--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header"></div>
     <form class="form">
-        <span class="mensagem-erro" id="error">Preencha todos os campos!</span>
+        <span class="mensagem-erro" id="error"></span>
         <label class="label" for="user">Usuário</label>
         <input class="input" id="user" type="email" placeholder="Informe seu email">
         <label class="label" for="password">Senha</label>
