--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/login.css">
 </head>
-<body>
+<body class="corpo">
+  
     <div class="header"></div>
     <form class="form">
         <span class="mensagem-erro" id="error"></span>
@@ -16,7 +17,11 @@
         <label class="label" for="password">Senha</label>
         <input class="input" id="password" type="password" placeholder="Informe sua senha">
         <div class="form-buttons">
-            <button class="button button-principal" id="entrar" type="button">Entrar</button>
+        
+            <button class="button button-principal" id="entrar" type="button">
+                Entrar 
+         </button>
+       
             <button class="button button-secundario" id="cadastrar" type="button">Cadastro</button>
         </div>
     </form>
