--- a/cadastro.html
+++ b/cadastro.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
-<body>
+<body class="corpo">
     <div class="header">
         <a href="./login.html">
             <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
         </a>
+        <img class="logo" src="./images/logo_matriz_verdejante.png" alt="">
     </div>
+
     <form class="form" id="form">
         <label class="label" for="name">Primeiro nome</label>
         <input class="input" id="name" name="nome" type="text" placeholder="Insira seu primeiro nome">
