Atualizando campo de cadastro e finalizando validações nos inputs

--- a/cadastro.html
+++ b/cadastro.html
@@ -10,43 +10,56 @@
 
 </head>
 <body>
-    <div class="header">
-        <a href="./login.html">
-            <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
-        </a>
+    <div id="bodyCadastro">
+        <div class="header">
+            <a href="./login.html">
+                <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
+            </a>
+        </div>
+        <form class="form" id="form">
+            <label class="label" for="name">Primeiro nome</label>
+            <input class="input" id="name" name="nome" type="text" placeholder="Insira seu primeiro nome">
+            <label class="label" for="last-name">Sobrenome</label>
+            <input class="input" id="last-name" name="sobrenome" type="text" placeholder="Insira seu sobrenome">
+            <label class="label" for="email">E-mail</label>
+            <input class="input" id="email" name="email" type="email" placeholder="Insira seu e-mail">
+            <label class="label" for="data">Data de Nascimento</label>
+            <input class="input" id="data" name="data" type="date" placeholder="00/00/0000">
+            <label class="label" for="cpf">CPF</label>
+            <input class="input" id="cpf" name="cpf" placeholder="000.000.000-00">
+            <label class="label" for="genero">Gênero</label>
+            <select id="genero" name="genero" class="input">
+                <option value=""></option>
+                <option value="fem">Feminino</option>
+                <option value="masc">Masculino</option>
+                <option value="null">Prefiro não informar</option>
+            </select>
+            <label class="label" for="celular">Celular</label>
+            <input class="input" id="celular" name="celular" placeholder="(00) 00000-0000">
+            <label class="label" for="senha">Senha</label>
+            <input class="input" id="senha" name="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25">
+            <ul class="list-requisitos" id="list">
+                <li>Mínimo 8 caracteres, máximo 25</li>
+                <li>Mínimo uma letra maiúscula</li>
+                <li>Mínimo uma letra minúscula</li>
+                <li>Mínimo um número</li>
+                <li>Mínimo um caractere especial (ex: ! @ _ +)</li>
+            </ul>
+            <label class="label" for="repetirSenha">Repetir senha</label>
+            <input class="input" id="repetirSenha" name="repetirSenha" type="password" placeholder="Digite novamente sua senha" minlength="8" maxlength="25">
+            <button class="button button-principal" id="criar" type="submit">Criar conta</button>
+        </form>
     </div>
-    <form class="form" id="form">
-        <label class="label" for="name">Primeiro nome</label>
-        <input class="input" id="name" name="nome" type="text" placeholder="Insira seu primeiro nome">
-        <label class="label" for="last-name">Sobrenome</label>
-        <input class="input" id="last-name" name="sobrenome" type="text" placeholder="Insira seu sobrenome">
-        <label class="label" for="email">E-mail</label>
-        <input class="input" id="email" name="email" type="email" placeholder="Insira seu e-mail">
-        <label class="label" for="data">Data de Nascimento</label>
-        <input class="input" id="data" name="data" placeholder="00/00/0000">
-        <label class="label" for="cpf">CPF</label>
-        <input class="input" id="cpf" name="cpf" placeholder="000.000.000-00">
-        <label class="label" for="genero">Gênero</label>
-        <select id="genero" name="genero" class="input">
-            <option value=""></option>
-            <option value="fem">Feminino</option>
-            <option value="masc">Masculino</option>
-        </select>
-        <label class="label" for="celular">Celular</label>
-        <input class="input" id="celular" name="celular" placeholder="(00) 00000-0000">
-        <label class="label" for="senha">Senha</label>
-        <input class="input" id="senha" name="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25">
-        <ul class="list-requisitos" id="list">
-            <li>Mínimo 8 caracteres, máximo 25</li>
-            <li>Mínimo uma letra maiúscula</li>
-            <li>Mínimo uma letra minúscula</li>
-            <li>Mínimo um número</li>
-            <li>Mínimo um caractere especial (ex: ! @ _ +)</li>
-        </ul>
-        <label class="label" for="repetirSenha">Repetir senha</label>
-        <input class="input" id="repetirSenha" name="repetirSenha" type="password" placeholder="Digite novamente sua senha" minlength="8" maxlength="25">
-        <button class="button button-principal" id="criar" type="submit">Criar conta</button>
-    </form>
+    <div class="mensage-sucess" id="mensage">
+        <div class="header-mensage">
+            <h3>Cadastro realizado!</h3>
+            <span class="material-symbols-outlined btnClose" id="btnClose">close</span>
+        </div>
+        <div class="body-mensage">
+            <p>Seu cadastro foi realizado com sucesso!</p>
+            <p>Volte a tela de login e preencha com seu e-mail e senha!</p>
+        </div>
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="./js/plugins-jquery/jquery.mask.min.js"></script>
