--- a/cadastro.html
+++ b/cadastro.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/cadastro.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
 </head>
 <body>
     <div id="bodyCadastro">
-        <div class="header">
+        <div class="header header-secundary">
             <a href="./login.html">
                 <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
             </a>
@@ -63,7 +63,6 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="./js/plugins-jquery/jquery.mask.min.js"></script>
-<script src="./js/plugins-jquery/jquery.validate.min.js"></script>
 <script src="./js/cadastro.js"></script>
 </html>
 
