--- a/login.html
+++ b/login.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/login.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header header-secundary">
+        <a href="./home.html">
+            <a class="material-symbols-outlined button-back" href="./home.html">arrow_back_ios</a>
+        </a>
+    </div>
     <form class="form">
         <span class="mensagem-erro" id="error"></span>
         <label class="label" for="user">Usuário</label>
