Padronizando estilização CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/home.css">
+    <link rel="stylesheet" href="./style/_home.css">
 
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
@@ -20,7 +20,7 @@
         <div class="header-links">
             <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
             <ul class="header-list">
-                <li><a class="header-link" href="./home.html">Home</a></li>
+                <li><a class="header-link" href="./index.html">Home</a></li>
                 <li><a class="header-link" href="#">Novidades</a></li>
                 <li><a class="header-link" href="#">Promoções</a></li>
                 <li><a class="header-link" href="#">Contato</a></li>
@@ -28,18 +28,18 @@
         </div>
         <li>
             <a href="./login.html">
-                <img class="header-icon" src="./images/icon-login.png" alt="">
+                <img class="header-icon" src="./images/icon-login.png" alt="Login">
             </a>
         </li>
     </header>
     <section>
         <div class="carrossel">
-            <img src="./images/carrossel-home/image1.png" alt="">
-            <img src="./images/carrossel-home/image2.png" alt="">
-            <img src="./images/carrossel-home/image3.png" alt="">
-            <img src="./images/carrossel-home/image4.png" alt="">
-            <img src="./images/carrossel-home/image5.png" alt="">
-            <img src="./images/carrossel-home/image6.png" alt="">
+            <img src="./images/carrossel-home/image1.png" alt="Imagem carrossel">
+            <img src="./images/carrossel-home/image2.png" alt="Imagem carrossel">
+            <img src="./images/carrossel-home/image3.png" alt="Imagem carrossel">
+            <img src="./images/carrossel-home/image4.png" alt="Imagem carrossel">
+            <img src="./images/carrossel-home/image5.png" alt="Imagem carrossel">
+            <img src="./images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
     </section>
 
@@ -48,31 +48,31 @@
         <ul class="categoria-list">
             <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                 <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="">
+                    <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
                     <h3 class="categoria-link">Rosto</h3>
                 </a>
             </li>
             <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
                 <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="">
+                    <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="Corpo">
                     <h3 class="categoria-link">Corpo</h3>
                 </a>
             </li>
             <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
                 <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="">
+                    <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                     <h3 class="categoria-link">Cabelo Feminino</h3>
                 </a>
             </li>
             <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
                 <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="">
+                    <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                     <h3 class="categoria-link">Cabelo Masculino</h3>
                 </a>
             </li>
             <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
                 <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="">
+                    <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="Barba">
                     <h3 class="categoria-link">Barba</h3>
                 </a>
             </li>
