Criando cadastro de vendedor

--- a/login.html
+++ b/login.html
@@ -25,6 +25,10 @@
             <button class="button button-principal" id="entrar" type="button">Entrar</button>
             <button class="button button-secundario" id="cadastrar" type="button">Cadastro</button>
         </div>
+        <div class="form-option">
+            <button class="button button-principal" type="button" id="cliente">Sou cliente</button>
+            <button class="button button-secundario" type="button" id="vendedor">Sou vendedor</button>
+        </div>
     </form>
 </body>
 <script src="./js/login.js"></script>
