Criando nova estrutura de organização

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <li>
-            <a href="./login.html">
+            <a href="./pages/login.html">
                 <img class="header-icon" src="./images/icon-login.png" alt="Login">
             </a>
         </li>
