--- a/pages/cadastro-cliente.html
+++ b/pages/cadastro-cliente.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/_cadastro.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/_cadastro.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -21,16 +21,21 @@
             <input class="input" id="name" type="text" placeholder="Insira seu primeiro nome">
             <label class="label" for="last-name">Sobrenome</label>
             <input class="input" id="last-name" type="text" placeholder="Insira seu sobrenome">
+            <label class="label" for="data">Data de Nascimento</label>
+            <input class="input" id="data" type="date" placeholder="00/00/0000">
             <label class="label" for="cpf">CPF</label>
             <input class="input" id="cpf" placeholder="000.000.000-00">
+            <label class="label" for="genero">Gênero</label>
+            <select id="genero" class="input">
+                <option value=""></option>
+                <option value="fem">Feminino</option>
+                <option value="masc">Masculino</option>
+                <option value="null">Prefiro não informar</option>
+            </select>
             <label class="label" for="email">E-mail</label>
             <input class="input" id="email" type="email" placeholder="Insira seu e-mail">
             <label class="label" for="celular">Celular</label>
             <input class="input" id="celular" placeholder="(00) 00000-0000">
-            <label class="label" for="cep">CEP</label>
-            <input class="input" id="cep" placeholder="00000-000" type="number">
-            <label class="label" for="descricao">Faça um breve resumo de como seus produtos são biogradáveis:</label>
-            <textarea class="input" id="descricao" rows="10"></textarea>
             <label class="label" for="senha">Senha</label>
             <input class="input" id="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25">
             <ul class="list-requisitos" id="list">
@@ -45,5 +50,19 @@
             <button class="button button-principal" id="criar" type="submit">Criar conta</button>
         </form>
     </div>
+    <div class="mensage-sucess" id="mensage">
+        <div class="header-mensage">
+            <h3>Cadastro realizado!</h3>
+            <span class="material-symbols-outlined btnClose" id="btnClose">close</span>
+        </div>
+        <div class="body-mensage">
+            <p>Seu cadastro foi realizado com sucesso!</p>
+            <p>Volte a tela de login e preencha com seu e-mail e senha!</p>
+        </div>
+    </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="../js/plugins-jquery/jquery.mask.min.js"></script>
+<script src="../js/cadastro-cliente.js"></script>
 </html>
+
