--- a/pages/login.html
+++ b/pages/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/_login.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/_login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="header header-secundary">
-        <a href="./index.html">
-            <a class="material-symbols-outlined button-back" href="./index.html">arrow_back_ios</a>
+        <a href="../index.html">
+            <a class="material-symbols-outlined button-back" href="../index.html">arrow_back_ios</a>
         </a>
     </div>
     <form class="form">
@@ -31,5 +31,5 @@
         </div>
     </form>
 </body>
-<script src="./js/login.js"></script>
+<script src="../js/login.js"></script>
 </html>
