--- a/pages/cadastro-cliente.html
+++ b/pages/cadastro-cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/_cadastro.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -16,7 +16,7 @@
                 <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
             </a>
         </div>
-        <form class="form" id="form">
+        <form class="form" id="formCliente">
             <label class="label" for="name">Primeiro nome</label>
             <input class="input" id="name" type="text" placeholder="Insira seu primeiro nome">
             <label class="label" for="last-name">Sobrenome</label>
@@ -63,6 +63,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="../js/plugins-jquery/jquery.mask.min.js"></script>
-<script src="../js/cadastro-cliente.js"></script>
+<script src="../js/cadastro/index.js"></script>
+<script src="../js/cadastro/cliente.js"></script>
 </html>
 
