--- a/pages/cadastro-vendedor.html
+++ b/pages/cadastro-vendedor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/main.css">
     <link rel="stylesheet" href="../style/_cadastro.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -16,7 +16,7 @@
                 <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
             </a>
         </div>
-        <form class="form" id="form">
+        <form class="form" id="formVendedor">
             <label class="label" for="name">Primeiro nome</label>
             <input class="input" id="name" type="text" placeholder="Insira seu primeiro nome">
             <label class="label" for="last-name">Sobrenome</label>
@@ -28,13 +28,13 @@
             <label class="label" for="celular">Celular</label>
             <input class="input" id="celular" placeholder="(00) 00000-0000">
             <label class="label" for="cep">CEP</label>
-            <input class="input" id="cep" placeholder="00000-000" type="number">
+            <input class="input" id="cep" placeholder="00000-000">
             <label class="label">Endereço</label>
-            <input class="input" readonly>
+            <input class="input" id="endereco" readonly>
             <label class="label">Cidade</label>
-            <input class="input" readonly>
+            <input class="input" id="cidade" readonly>
             <label class="label">Estado</label>
-            <input class="input" readonly>
+            <input class="input" id="estado" readonly>
             <label class="label" for="descricao">Faça um breve resumo de como seus produtos são biogradáveis:</label>
             <textarea class="input" id="descricao" rows="10"></textarea>
             <label class="label" for="senha">Senha</label>
@@ -51,6 +51,9 @@
             <button class="button button-principal" id="criar" type="submit">Criar conta</button>
         </form>
     </div>
-    <script src="../js/cadastro-vendedor.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="../js/plugins-jquery/jquery.mask.min.js"></script>
+    <script src="../js/cadastro/index.js"></script>
+    <script src="../js/cadastro/vendedor.js"></script>
 </body>
 </html>
