--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/_home.css">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 
@@ -17,20 +19,21 @@
 
 <body>
     <header class="header">
+        <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
         <div class="header-links">
-            <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
             <ul class="header-list">
                 <li><a class="header-link" href="./index.html">Home</a></li>
                 <li><a class="header-link" href="#">Novidades</a></li>
                 <li><a class="header-link" href="#">Promoções</a></li>
                 <li><a class="header-link" href="#">Contato</a></li>
             </ul>
+            <div>
+                <a href="./pages/login.html">
+                    <img class="header-icon" src="./images/icon-login.png" alt="Login">
+                </a>
+            </div>
         </div>
-        <li>
-            <a href="./pages/login.html">
-                <img class="header-icon" src="./images/icon-login.png" alt="Login">
-            </a>
-        </li>
+        <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
     </header>
     <section>
         <div class="carrossel">
