--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 <body>
     <header class="header">
         <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
-        <div class="header-links">
+        <div class="header-links" id="header-links">
             <ul class="header-list">
                 <li><a class="header-link" href="./index.html">Home</a></li>
                 <li><a class="header-link" href="#">Novidades</a></li>
                 <li><a class="header-link" href="#">Promoções</a></li>
                 <li><a class="header-link" href="#">Contato</a></li>
             </ul>
-            <div>
-                <a href="./pages/login.html">
-                    <img class="header-icon" src="./images/icon-login.png" alt="Login">
-                </a>
-            </div>
+            <a href="./pages/login.html">
+                <img class="header-icon" src="./images/icon-login.png" alt="Login">
+            </a>
+        
         </div>
         <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
     </header>
