--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
     <header class="header">
         <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
         <div class="header-links" id="header-links">
-            <ul class="header-list">
-                <li><a class="header-link" href="./index.html">Home</a></li>
-                <li><a class="header-link" href="#">Novidades</a></li>
-                <li><a class="header-link" href="#">Promoções</a></li>
-                <li><a class="header-link" href="#">Contato</a></li>
+            <ul class="header-options">
+                <div class="header-list">
+                    <li><a class="header-link" href="./index.html">Home</a></li>
+                    <li><a class="header-link" href="#">Novidades</a></li>
+                    <li><a class="header-link" href="#">Promoções</a></li>
+                    <li><a class="header-link" href="#">Contato</a></li>
+                </div>
+                <div class="header-menu">
+                    <a href="./pages/login.html">
+                        <img class="header-icon" src="./images/icon-login.png" alt="Login">
+                    </a>
+                    <span class="material-symbols-outlined" id="btn-close">close</span>
+                </div>
             </ul>
-            <a href="./pages/login.html">
-                <img class="header-icon" src="./images/icon-login.png" alt="Login">
-            </a>
-        
         </div>
         <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
     </header>
