--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
         <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
     </header>
-    <section>
+
+    <div class="carrosselECategorias">
         <div class="carrossel">
             <img src="./images/carrossel-home/image1.png" alt="Imagem carrossel">
             <img src="./images/carrossel-home/image2.png" alt="Imagem carrossel">
@@ -47,43 +48,43 @@
             <img src="./images/carrossel-home/image5.png" alt="Imagem carrossel">
             <img src="./images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
-    </section>
+        <section class="container">
+            <h2 class="title title-categorias">Busque por categorias</h2>
+            <ul class="categoria-list">
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="250" data-aos='none'>
+                    <a href="#">
+                        <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
+                        <h3 class="categoria-link">Rosto</h3>
+                    </a>
+                </li>
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
+                    <a href="#">
+                        <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="Corpo">
+                        <h3 class="categoria-link">Corpo</h3>
+                    </a>
+                </li>
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
+                    <a href="#">
+                        <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
+                        <h3 class="categoria-link">Cabelo Feminino</h3>
+                    </a>
+                </li>
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
+                    <a href="#">
+                        <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
+                        <h3 class="categoria-link">Cabelo Masculino</h3>
+                    </a>
+                </li>
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
+                    <a href="#">
+                        <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="Barba">
+                        <h3 class="categoria-link">Barba</h3>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </div>
 
-    <section class="container">
-        <h2 class="title">Busque por categorias</h2>
-        <ul class="categoria-list">
-            <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
-                <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
-                    <h3 class="categoria-link">Rosto</h3>
-                </a>
-            </li>
-            <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
-                <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="Corpo">
-                    <h3 class="categoria-link">Corpo</h3>
-                </a>
-            </li>
-            <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
-                <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
-                    <h3 class="categoria-link">Cabelo Feminino</h3>
-                </a>
-            </li>
-            <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
-                <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
-                    <h3 class="categoria-link">Cabelo Masculino</h3>
-                </a>
-            </li>
-            <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
-                <a href="#">
-                    <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="Barba">
-                    <h3 class="categoria-link">Barba</h3>
-                </a>
-            </li>
-        </ul>
-    </section>
 
     <section class="container">
         <h2 class="title">Produtos em destaque: </h2>
@@ -114,7 +115,7 @@
                 <img class="destaque-img" src="./images/produtos-destaque/oleo.png" alt="Óleo">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Oléo essencial</h4>
-                    <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a confiança da natureza, trazendo sua verdadeira essência para o seu dia a dia.</p>
+                    <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
@@ -137,9 +138,9 @@
 
     <section class="container">
         <h2 class="title">Sobre nós</h2>
-        <p class="text" data-aos="fade-right">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contêm ingredientes prejudiciais à saúde e ao planeta.</p>
-        <p class="text" data-aos="fade-left">Acreditamos que é possível alcançar a beleza sem comprometer o bem-estar pessoal e o meio ambiente. Nossos cosméticos são formulados com ingredientes naturais e orgânicos, livres de substâncias tóxicas e crueldade animal. Além disso, nossas embalagens são feitas de materiais recicláveis e biodegradáveis.</p>
-        <p class="text" data-aos="fade-right">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
+        <p class="text" data-aos="zoom-in-left">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contêm ingredientes prejudiciais à saúde e ao planeta.</p>
+        <p class="text" data-aos="zoom-in-right">Acreditamos que é possível alcançar a beleza sem comprometer o bem-estar pessoal e o meio ambiente. Nossos cosméticos são formulados com ingredientes naturais e orgânicos, livres de substâncias tóxicas e crueldade animal. Além disso, nossas embalagens são feitas de materiais recicláveis e biodegradáveis.</p>
+        <p class="text" data-aos="zoom-in-left">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
     </section>
 
     <section class="footer">
