--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="container">
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="250" data-aos='none'>
+                <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                     <a href="#">
                         <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
@@ -138,9 +138,9 @@
 
     <section class="container">
         <h2 class="title">Sobre nós</h2>
-        <p class="text" data-aos="zoom-in-left">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contêm ingredientes prejudiciais à saúde e ao planeta.</p>
-        <p class="text" data-aos="zoom-in-right">Acreditamos que é possível alcançar a beleza sem comprometer o bem-estar pessoal e o meio ambiente. Nossos cosméticos são formulados com ingredientes naturais e orgânicos, livres de substâncias tóxicas e crueldade animal. Além disso, nossas embalagens são feitas de materiais recicláveis e biodegradáveis.</p>
-        <p class="text" data-aos="zoom-in-left">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="250">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contêm ingredientes prejudiciais à saúde e ao planeta.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="500">Acreditamos que é possível alcançar a beleza sem comprometer o bem-estar pessoal e o meio ambiente. Nossos cosméticos são formulados com ingredientes naturais e orgânicos, livres de substâncias tóxicas e crueldade animal. Além disso, nossas embalagens são feitas de materiais recicláveis e biodegradáveis.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="750">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
     </section>
 
     <section class="footer">
