--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/_home.css">
+    <link rel="stylesheet" href="./style/desktop/_home.css">
+    <link rel="stylesheet" href="./style/tablet/_home.css">
+    <link rel="stylesheet" href="./style/mobile/_home.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -48,7 +50,7 @@
             <img src="./images/carrossel-home/image5.png" alt="Imagem carrossel">
             <img src="./images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
-        <section class="container">
+        <section class="container categorias">
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
@@ -66,13 +68,13 @@
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
                     <a href="#">
                         <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
-                        <h3 class="categoria-link">Cabelo Feminino</h3>
+                        <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
                     <a href="#">
                         <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
-                        <h3 class="categoria-link">Cabelo Masculino</h3>
+                        <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
