Finalizando validação do form-vendedor

--- a/pages/cadastro-vendedor.html
+++ b/pages/cadastro-vendedor.html
@@ -55,6 +55,17 @@
             <button class="button button-principal" id="criar" type="submit">Criar conta</button>
         </form>
     </div>
+    <div class="mensage-sucess" id="mensage">
+        <div class="header-mensage">
+            <h3>Cadastro realizado!</h3>
+            <span class="material-symbols-outlined btnClose" id="btnClose">close</span>
+        </div>
+        <div class="body-mensage">
+            <p>Seu cadastro foi realizado com sucesso!</p>
+            <p>Volte a tela de login e preencha com seu e-mail e senha!</p>
+        </div>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/plugins-jquery/jquery.mask.min.js"></script>
     <script src="../js/cadastro/index.js"></script>
