--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <span class="star" data-rating="3">&#9733;</span>
                         <span class="star" data-rating="4">&#9733;</span>
                         <span class="star" data-rating="5">&#9733;</span>
-                         <p class="destaque-text">sua avaliação <span id="rating">0</span></p>
+                        <br><p class="destaque-text">sua avaliação <span id="rating">0</span></p>
                      </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
