--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
                     <h4 class="destaque-title">Condicionador intra cura</h4>
                     <p class="destaque-text">Experimente a sensação de ter cabelos mais saudáveis, brilhantes, radiantes e fortalecidos a cada lavagem. </p>
                     <div class="destaque-comprar">
+                        <div class="rating">
+                        <span class="star" data-rating="1">&#9733;</span>
+                        <span class="star" data-rating="2">&#9733;</span>
+                        <span class="star" data-rating="3">&#9733;</span>
+                        <span class="star" data-rating="4">&#9733;</span>
+                        <span class="star" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                     </div>
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
                     </div>
@@ -109,6 +117,14 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
+                        <div class="rating">
+                        <span class="star" data-rating="1">&#9733;</span>
+                        <span class="star" data-rating="2">&#9733;</span>
+                        <span class="star" data-rating="3">&#9733;</span>
+                        <span class="star" data-rating="4">&#9733;</span>
+                        <span class="star" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                     </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
@@ -126,7 +142,7 @@
                         <span class="star" data-rating="3">&#9733;</span>
                         <span class="star" data-rating="4">&#9733;</span>
                         <span class="star" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating">0</span>estrelas</p>
+                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
                      </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
@@ -139,6 +155,14 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
+                        <div class="rating">
+                        <span class="star" data-rating="1">&#9733;</span>
+                        <span class="star" data-rating="2">&#9733;</span>
+                        <span class="star" data-rating="3">&#9733;</span>
+                        <span class="star" data-rating="4">&#9733;</span>
+                        <span class="star" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                     </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
