--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
-                        <div class="rating">
+                        <div class="rating1">
                         <span class="star" data-rating="1">&#9733;</span>
                         <span class="star" data-rating="2">&#9733;</span>
                         <span class="star" data-rating="3">&#9733;</span>
@@ -136,7 +136,7 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Oléo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
-                     <div class="rating">
+                     <div class="rating2">
                         <span class="star" data-rating="1">&#9733;</span>
                         <span class="star" data-rating="2">&#9733;</span>
                         <span class="star" data-rating="3">&#9733;</span>
@@ -155,7 +155,7 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
-                        <div class="rating">
+                        <div class="rating3">
                         <span class="star" data-rating="1">&#9733;</span>
                         <span class="star" data-rating="2">&#9733;</span>
                         <span class="star" data-rating="3">&#9733;</span>
