--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
                         <div class="rating1">
-                        <span class="star" data-rating="1">&#9733;</span>
-                        <span class="star" data-rating="2">&#9733;</span>
-                        <span class="star" data-rating="3">&#9733;</span>
-                        <span class="star" data-rating="4">&#9733;</span>
-                        <span class="star" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                        <span class="star1" data-rating="1">&#9733;</span>
+                        <span class="star1" data-rating="2">&#9733;</span>
+                        <span class="star1" data-rating="3">&#9733;</span>
+                        <span class="star1" data-rating="4">&#9733;</span>
+                        <span class="star1" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating1">0</span> estrelas</p>
                      </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
@@ -137,12 +137,12 @@
                     <h4 class="destaque-title">Oléo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
                      <div class="rating2">
-                        <span class="star" data-rating="1">&#9733;</span>
-                        <span class="star" data-rating="2">&#9733;</span>
-                        <span class="star" data-rating="3">&#9733;</span>
-                        <span class="star" data-rating="4">&#9733;</span>
-                        <span class="star" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="2">&#9733;</span>
+                        <span class="star2" data-rating="3">&#9733;</span>
+                        <span class="star2" data-rating="4">&#9733;</span>
+                        <span class="star2" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating2">0</span> estrelas</p>
                      </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
@@ -156,12 +156,12 @@
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
                         <div class="rating3">
-                        <span class="star" data-rating="1">&#9733;</span>
-                        <span class="star" data-rating="2">&#9733;</span>
-                        <span class="star" data-rating="3">&#9733;</span>
-                        <span class="star" data-rating="4">&#9733;</span>
-                        <span class="star" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                        <span class="star3" data-rating="1">&#9733;</span>
+                        <span class="star3" data-rating="2">&#9733;</span>
+                        <span class="star3" data-rating="3">&#9733;</span>
+                        <span class="star3" data-rating="4">&#9733;</span>
+                        <span class="star3" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating3">0</span> estrelas</p>
                      </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
