--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                     <a href="#">
-                        <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
+                        <img class="categoria-img" href="./pages/rosto.html" src="./images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
