--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
-                    <a href="#">
-                        <img class="categoria-img" href="./pages/rosto.html" src="./images/icons-categoria/rosto.png" alt="Rosto">
+                    <a href="./pages/rosto.html">
+                        <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
