--- a/pages/rosto.html
+++ b/pages/rosto.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/desktop/_rosto.css"> 
+    <link rel="stylesheet" href="./style/desktop/_login.css"> 
     <link rel="stylesheet" href="./style/tablet/_rosto.css">
     <link rel="stylesheet" href="./style/mobile/_rosto.css">
 
