--- a/pages/rosto.html
+++ b/pages/rosto.html
@@ -8,9 +8,10 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/desktop/_login.css"> 
-    <link rel="stylesheet" href="./style/tablet/_rosto.css">
-    <link rel="stylesheet" href="./style/mobile/_rosto.css">
+    <link rel="stylesheet" href="./style/desktop/_home.css">
+    <link rel="stylesheet" href="./style/tablet/_home.css">
+    <link rel="stylesheet" href="./style/mobile/_home.css">
+
 
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
