--- a/pages/rosto.html
+++ b/pages/rosto.html
@@ -54,4 +54,15 @@
                 <img src="./images/carrossel-home/image5.png" alt="Imagem carrossel">
                 <img src="./images/carrossel-home/image6.png" alt="Imagem carrossel">
             </div>
+              <section class="footer">
+        <img class="footer-logo" src="./images/logo.png" alt="Logo">
+        <p>2023 &copy Desenvolvido por Grupo 6 | Projeto Interdiciplinar</p>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./js/home.js"></script>
+    <script src="./js/rating.js"></script>
+</body>
 </body>
