--- a/pages/home-cliente.html
+++ b/pages/home-cliente.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matiz Verdejante - Deixando o Mundo Mais Verde</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/desktop/_home.css">
-    <link rel="stylesheet" href="./style/tablet/_home.css">
-    <link rel="stylesheet" href="./style/mobile/_home.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/desktop/_home.css">
+    <link rel="stylesheet" href="../style/tablet/_home.css">
+    <link rel="stylesheet" href="../style/mobile/_home.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -18,12 +18,12 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="./style/rating_style.css">
+    <link rel="stylesheet" href="../style/rating_style.css">
 </head>
 
 <body>
     <header class="header">
-        <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
+        <img src="../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
@@ -33,8 +33,11 @@
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
+                    <a href="#">
+                        <span class="material-symbols-outlined" id="icon-link">shopping_cart</span>
+                    </a>
                     <a href="./pages/login.html">
-                        <img class="header-icon" src="./images/icon-login.png" alt="Login">
+                        <img class="header-icon" src="../images/icon-login.png" alt="Login">
                     </a>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
                 </div>
@@ -45,43 +48,43 @@
 
     <div class="carrosselECategorias">
         <div class="carrossel">
-            <img src="./images/carrossel-home/image1.png" alt="Imagem carrossel">
-            <img src="./images/carrossel-home/image2.png" alt="Imagem carrossel">
-            <img src="./images/carrossel-home/image3.png" alt="Imagem carrossel">
-            <img src="./images/carrossel-home/image4.png" alt="Imagem carrossel">
-            <img src="./images/carrossel-home/image5.png" alt="Imagem carrossel">
-            <img src="./images/carrossel-home/image6.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image1.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image2.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image3.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image4.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image5.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
         <section class="container categorias">
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                     <a href="./pages/rosto.html"> 
-                        <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
+                        <img class="categoria-img" src="../images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
                     <a href="#">
-                        <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="Corpo">
+                        <img class="categoria-img" src="../images/icons-categoria/corpo.png" alt="Corpo">
                         <h3 class="categoria-link">Corpo</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
                     <a href="#">
-                        <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
+                        <img class="categoria-img" src="../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                         <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
                     <a href="#">
-                        <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
+                        <img class="categoria-img" src="../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                         <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
                     <a href="#">
-                        <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="Barba">
+                        <img class="categoria-img" src="../images/icons-categoria/barba.png" alt="Barba">
                         <h3 class="categoria-link">Barba</h3>
                     </a>
                 </li>
@@ -94,46 +97,78 @@
         <h2 class="title">Produtos em destaque: </h2>
         <ul class="destaque-lista">
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="./images/produtos-destaque/condicionador.png" alt="Condicionador">
+                <img class="destaque-img" src="../images/produtos-destaque/condicionador.png" alt="Condicionador">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Condicionador intra cura</h4>
                     <p class="destaque-text">Experimente a sensação de ter cabelos mais saudáveis, brilhantes, radiantes e fortalecidos a cada lavagem. </p>
+                        <div class="rating">
+                        <span class="star" data-rating="1">&#9733;</span>
+                        <span class="star" data-rating="2">&#9733;</span>
+                        <span class="star" data-rating="3">&#9733;</span>
+                        <span class="star" data-rating="4">&#9733;</span>
+                        <span class="star" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                    </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
-                        <button onclick="window.location.href = './pages/login.html'" class="button button-principal">Comprar</button>
+                        <button class="button button-principal">Comprar</button>
                     </div>
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="./images/produtos-destaque/creme.png" alt="Creme">
+                <img class="destaque-img" src="../images/produtos-destaque/creme.png" alt="Creme">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
+                        <div class="rating1">
+                        <span class="star1" data-rating="1">&#9733;</span>
+                        <span class="star1" data-rating="2">&#9733;</span>
+                        <span class="star1" data-rating="3">&#9733;</span>
+                        <span class="star1" data-rating="4">&#9733;</span>
+                        <span class="star1" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating1">0</span> estrelas</p>
+                    </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
-                        <button onclick="window.location.href = './pages/login.html'" class="button button-principal">Comprar</button>
+                        <button class="button button-principal">Comprar</button>
                     </div>
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="./images/produtos-destaque/oleo.png" alt="Óleo">
+                <img class="destaque-img" src="../images/produtos-destaque/oleo.png" alt="Óleo">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Oléo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
+                    <div class="rating2">
+                        <span class="star2" data-rating="1">&#9733;</span>
+                        <span class="star2" data-rating="2">&#9733;</span>
+                        <span class="star2" data-rating="3">&#9733;</span>
+                        <span class="star2" data-rating="4">&#9733;</span>
+                        <span class="star2" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating2">0</span> estrelas</p>
+                    </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
-                        <button onclick="window.location.href = './pages/login.html'" class="button button-principal">Comprar</button>
+                        <button class="button button-principal">Comprar</button>
                     </div>
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="./images/produtos-destaque/shampo.png" alt="Shampo">
+                <img class="destaque-img" src="../images/produtos-destaque/shampo.png" alt="Shampo">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
+                        <div class="rating3">
+                        <span class="star3" data-rating="1">&#9733;</span>
+                        <span class="star3" data-rating="2">&#9733;</span>
+                        <span class="star3" data-rating="3">&#9733;</span>
+                        <span class="star3" data-rating="4">&#9733;</span>
+                        <span class="star3" data-rating="5">&#9733;</span>
+                        <p class="destaque-text"><span id="rating3">0</span> estrelas</p>
+                    </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
-                        <button onclick="window.location.href = './pages/login.html'" class="button button-principal">Comprar</button>
+                        <button class="button button-principal">Comprar</button>
                     </div>
                 </div>
             </li>
@@ -148,14 +183,14 @@
     </section>
 
     <section class="footer">
-        <img class="footer-logo" src="./images/logo.png" alt="Logo">
+        <img class="footer-logo" src="../images/logo.png" alt="Logo">
         <p>2023 &copy Desenvolvido por Grupo 6 | Projeto Interdiciplinar</p>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./js/home.js"></script>
-    <script src="./js/rating.js"></script>
+    <script src="../js/home.js"></script>
+    <script src="../js/rating.js"></script>
 </body>
 </html>
